--- a/public/templates/contacts.template.html
+++ b/public/templates/contacts.template.html
@@ -1,25 +1,21 @@
-<div id="main">
-    <div class="container">
-        <div class="row main-row">
-            <div class="col-md-6">
+<div class="row">
+    <div class="col-md-6">
 
-                <section>
-                    <h2>Контакти</h2>
-                </section>
+        <section>
+            <h2>Контакти</h2>
+        </section>
 
-            </div>
-            <div class="col-md-6">
+    </div>
+    <div class="col-md-6">
 
-                <article class="blog-post">
-                    <h2>Як нас знайти</h2>
-                    <a class="comments" href="#">33 коментарі</a>
+        <article>
+            <h2>Як нас знайти</h2>
+            <a href="#">33 коментарі</a>
 
-                    <footer class="controls">
-                        <a href="#" class="button">Читати далі</a>
-                    </footer>
-                </article>
+            <footer>
+                <a href="#">Читати далі</a>
+            </footer>
+        </article>
 
-            </div>
-        </div>
     </div>
 </div>
