--- a/public/templates/home.template.html
+++ b/public/templates/home.template.html
@@ -1,76 +1,65 @@
-<div id="banner-wrapper">
-    <div class="container banner-container">
+<div id="banner">
+    <h2><span>наша компанія</span></h2>
+    <h3><span>ми піклуємось про ваше здоров'я ...</span></h3>
+</div>
+<div class="row">
+    <div class="col-md-6">
 
-        <div id="banner">
-            <h2>наша компанія</h2>
-            <span>ми піклуємось про ваше здоров'я ...</span>
-        </div>
+        <section>
+            <h2>Лідерство Wines,
+                компанія світового класу</h2>
+            <p>З маленької торгівельної компанії Wines перетворилася на корпорацію світового класу,
+                бізнес якої охоплює прогресивні технології, виробництво напівпровідників,
+                будівництво хмарочосів і заводів, нафтохімію, моду, медицину, фінанси,
+                готельну справу та багато іншого. Наші відкриття, винаходи та інноваційні
+                продукти дали нам змогу стати лідером цих індустрій, постійно розвиваючи їх.</p>
+            <ul>
+                <li>
+                    <a href="#"><img src="images/pic3.jpg" alt="" class="left" /></a>
+                    <h3>Wines у нашому житті,
+                        поліпшення повсякденних умов</h3>
+                    <p>Wines незмінно ділиться з людьми по всьому світу своїм перетворюючим досвідом,
+                        від інновацій в області споживчої електроніки до біофармацевтичних розробок.
+                        Прихильні ідеї створення чудових продуктів і послуг у всіх областях бізнесу,
+                        ми прагнемо поліпшити життя людей і привнести позитивні зміни в оточуючий світ.</p>
+                </li>
+                <li>
+                    <a href="#"><img src="images/pic4.jpg" alt="" class="left" /></a>
+                    <h3>Внесок Wines,
+                        незмінна соціальна відповідальність</h3>
+                    <p>Ми вимірюємо свої успіхи не лише досягненнями в бізнесі, а й тим,
+                        наскільки успішно ми служимо суспільству, піклуємося про збереження
+                        ресурсів планети та привносимо зміни в людські життя. Ми відчуваємо
+                        відповідальність за те, щоб створити позитивний корпоративний імідж й
+                        усюди в світі діяти на благо суспільного прогресу, оберігати та
+                        покращувати довкілля, а також зміцнювати соціальні стандарти.</p>
+                </li>
+            </ul>
+        </section>
 
     </div>
-</div>
+    <div class="col-md-6">
+        <article>
+            <h2>Ще один пост</h2>
+            <a href="#">33 comments</a>
+            <a href="#"><img src="images/pic6.jpg" alt="" class="top" /></a>
+            <h3>Взаємне сприяння</h3>
+            <p>Бізнес не буває успішним, якщо не веде до процвітання і відкриття можливостей для інших.
+                Компанія Wines прагне бути соціально та екологічно відповідальним корпоративним
+                громадянином у кожній спільноті, де ми ведемо свою діяльність, на всій земній кулі.</p>
+            <a href="#"><img src="images/pic5.jpg" alt="" class="left" /></a>
+            <h3>Wines створює можливості,
+                корпорація відкриттів</h3>
+            <p>Наша мета проста: це надання вам свободи подорожувати, відкривати для себе
+                новий досвід; піклуватися про наш світ. Це надання можливості пов'язати те,
+                ким ви є сьогодні, з тим, ким ви хочете стати завтра. У світі, що змінюється,
+                люди змінюються швидше. Ми незмінно прагнемо відкриттів та новаторства,
+                створення технологій і надання послуг, які роблять нас сильнішими та
+                відкривають двері у світ можливого.</p>
+            <footer>
+                <a href="#" class="button">Продовжити</a>
+            </footer>
+        </article>
 
-<div id="main">
-    <div class="container">
-        <div class="row main-row">
-            <div class="col-md-6">
-
-                <section>
-                    <h2>Лідерство Wines,
-                        компанія світового класу</h2>
-                    <p>З маленької торгівельної компанії Wines перетворилася на корпорацію світового класу,
-                        бізнес якої охоплює прогресивні технології, виробництво напівпровідників,
-                        будівництво хмарочосів і заводів, нафтохімію, моду, медицину, фінанси,
-                        готельну справу та багато іншого. Наші відкриття, винаходи та інноваційні
-                        продукти дали нам змогу стати лідером цих індустрій, постійно розвиваючи їх.</p>
-                    <ul class="big-image-list">
-                        <li>
-                            <a href="#"><img src="images/pic3.jpg" alt="" class="left" /></a>
-                            <h3>Wines у нашому житті,
-                                поліпшення повсякденних умов</h3>
-                            <p>Wines незмінно ділиться з людьми по всьому світу своїм перетворюючим досвідом,
-                                від інновацій в області споживчої електроніки до біофармацевтичних розробок.
-                                Прихильні ідеї створення чудових продуктів і послуг у всіх областях бізнесу,
-                                ми прагнемо поліпшити життя людей і привнести позитивні зміни в оточуючий світ.</p>
-                        </li>
-                        <li>
-                            <a href="#"><img src="images/pic4.jpg" alt="" class="left" /></a>
-                            <h3>Внесок Wines,
-                                незмінна соціальна відповідальність</h3>
-                            <p>Ми вимірюємо свої успіхи не лише досягненнями в бізнесі, а й тим,
-                                наскільки успішно ми служимо суспільству, піклуємося про збереження
-                                ресурсів планети та привносимо зміни в людські життя. Ми відчуваємо
-                                відповідальність за те, щоб створити позитивний корпоративний імідж й
-                                усюди в світі діяти на благо суспільного прогресу, оберігати та
-                                покращувати довкілля, а також зміцнювати соціальні стандарти.</p>
-                        </li>
-                    </ul>
-                </section>
-
-            </div>
-            <div class="col-md-6">
-                <article class="blog-post">
-                    <h2>Ще один пост</h2>
-                    <a class="comments" href="#">33 comments</a>
-                    <a href="#"><img src="images/pic6.jpg" alt="" class="top blog-post-image" /></a>
-                    <h3>Взаємне сприяння</h3>
-                    <p>Бізнес не буває успішним, якщо не веде до процвітання і відкриття можливостей для інших.
-                        Компанія Wines прагне бути соціально та екологічно відповідальним корпоративним
-                        громадянином у кожній спільноті, де ми ведемо свою діяльність, на всій земній кулі.</p>
-                    <a href="#"><img src="images/pic5.jpg" alt="" class="left" /></a>
-                    <h3>Wines створює можливості,
-                        корпорація відкриттів</h3>
-                    <p>Наша мета проста: це надання вам свободи подорожувати, відкривати для себе
-                        новий досвід; піклуватися про наш світ. Це надання можливості пов'язати те,
-                        ким ви є сьогодні, з тим, ким ви хочете стати завтра. У світі, що змінюється,
-                        люди змінюються швидше. Ми незмінно прагнемо відкриттів та новаторства,
-                        створення технологій і надання послуг, які роблять нас сильнішими та
-                        відкривають двері у світ можливого.</p>
-                    <footer class="controls">
-                        <a href="#" class="button">Продовжити</a>
-                    </footer>
-                </article>
-
-            </div>
-        </div>
     </div>
 </div>
