--- a/public/template/ngCart/summary.html
+++ b/public/template/ngCart/summary.html
@@ -1,4 +1,4 @@
-<div class="basket">
+<div>
     <div>
         <svg version="1.1"  class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px" height="30px" xml:space="preserve">
 			<path d="M27.715,10.48l-2.938,6.312c-0.082,0.264-0.477,0.968-1.318,0.968H11.831
@@ -12,11 +12,14 @@
 				c-0.455,0-0.82-0.364-0.82-0.818s0.365-0.82,0.82-0.82h2.841c1.827,0,2.4,1.103,2.715,2.181
 				c0.264,0.898,3.569,12.146,3.821,12.999c0.087,0.188,0.611,1.197,1.688,1.197h10.611c0.451,0,0.818,0.368,0.818,0.818
 				C25.395,21.21,25.027,21.575,24.576,21.575L24.576,21.575z"/>
-</svg><br>
-        {{ ngCart.getTotalItems() }}
+        </svg>
+    </div>
+    <ul id="summaryList">
+        <li>{{ ngCart.getTotalItems() }}
         <ng-pluralize
                 count="ngCart.getTotalItems()"
-                when="{1: 'товар', 2: 'товари', 3: 'товари', 4: 'товари', 'other':'товарів'}"></ng-pluralize>
-        <br />{{ ngCart.totalCost() | currency }}
-    </div>
+                when="{1: 'товар', 2: 'товари', 3: 'товари', 4: 'товари', 'other':'товарів'}">
+        </ng-pluralize></li>
+        <li>{{ ngCart.totalCost() | currency: '₴ ' }} грн.</li>
+    </ul>
 </div>
