--- a/public/templates/about.template.html
+++ b/public/templates/about.template.html
@@ -1,67 +1,61 @@
-<div id="main">
-    <div class="container">
-        <div class="row main-row">
-            <div class="col-md-4">
+<div class="row">
+    <div class="col-md-4">
 
-                <section>
-                    <h2>Про компанію</h2>
-                    <p>Компанія «Wines» в Україні представляє інтереси міжнародної
-                        корпорації «International Corporation Inc.» та входить в одну з найбільших в Україні
-                        фінансово-промислову групу «Wines Group».</p>
-                    <footer>
-                        <a href="#" class="button">Детальніше</a>
-                    </footer>
-                </section>
+        <section>
+            <h2>Про компанію</h2>
+            <p>Компанія «Wines» в Україні представляє інтереси міжнародної
+                корпорації «International Corporation Inc.» та входить в одну з найбільших в Україні
+                фінансово-промислову групу «Wines Group».</p>
+            <footer>
+                <a href="#">Детальніше</a>
+            </footer>
+        </section>
 
-            </div>
-            <div class="col-md-4">
+    </div>
+    <div class="col-md-4">
 
-                <section>
-                    <h2>Засновники</h2>
-                    <ul class="small-image-list">
-                        <li>
-                            <a href="#"><img src="images/pic2.jpg" alt="" class="left" /></a>
-                            <h4>Борат Сагдієв</h4>
-                            <p>Генеральний директор</p>
-                        </li>
-                        <li>
-                            <a href="#"><img src="images/pic1.jpg" alt="" class="left" /></a>
-                            <h4>Павло Зібров</h4>
-                            <p>Виконавчий директор</p>
-                        </li>
+        <section>
+            <h2>Засновники</h2>
+            <ul>
+                <li>
+                    <a href="#"><img src="images/pic2.jpg" alt="" class="left" /></a>
+                    <h4>Борат Сагдієв</h4>
+                    <p>Генеральний директор</p>
+                </li>
+                <li>
+                    <a href="#"><img src="images/pic1.jpg" alt="" class="left" /></a>
+                    <h4>Павло Зібров</h4>
+                    <p>Виконавчий директор</p>
+                </li>
+            </ul>
+        </section>
+
+    </div>
+    <div class="col-md-4">
+
+        <section>
+            <h2>Наші партнери</h2>
+            <div>
+                <div class="col-md-6">
+                    <ul>
+                        <li><a href="#">Microsoft Corporation</a></li>
+                        <li><a href="#">Google</a></li>
+                        <li><a href="#">Nokia Corp.</a></li>
+                        <li><a href="#">Samsung</a></li>
+                        <li><a href="#">Apple</a></li>
                     </ul>
-                </section>
-
+                </div>
+                <div class="col-md-6">
+                    <ul>
+                        <li><a href="#">Heineken</a></li>
+                        <li><a href="#">Jack Daniels</a></li>
+                        <li><a href="#">Tekila</a></li>
+                        <li><a href="#">Horilka Corp.</a></li>
+                        <li><a href="#">Zakuska Inc.</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-md-4">
+        </section>
 
-                <section>
-                    <h2>Наші партнери</h2>
-                    <div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <ul class="link-list">
-                                    <li><a href="#">Microsoft Corporation</a></li>
-                                    <li><a href="#">Google</a></li>
-                                    <li><a href="#">Nokia Corp.</a></li>
-                                    <li><a href="#">Samsung</a></li>
-                                    <li><a href="#">Apple</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-md-6">
-                                <ul class="link-list">
-                                    <li><a href="#">Heineken</a></li>
-                                    <li><a href="#">Jack Daniels</a></li>
-                                    <li><a href="#">Tekila</a></li>
-                                    <li><a href="#">Horilka Corp.</a></li>
-                                    <li><a href="#">Zakuska Inc.</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
-            </div>
-        </div>
     </div>
 </div>
