--- a/public/templates/basket.template.html
+++ b/public/templates/basket.template.html
@@ -1,15 +1,11 @@
-<div id="main">
-    <div class="container">
-        <div class="row main-row">
-            <div class="col-md-12">
+<div class="row">
+    <div class="col-md-12">
 
-                <article class="blog-post">
-                    <h2>Вибрана продукція</h2>
-                </article>
+        <article>
+            <h2>Вибрана продукція</h2>
+        </article>
 
-                <ngcart-cart></ngcart-cart>
+        <ngcart-cart></ngcart-cart>
 
-            </div>
-        </div>
     </div>
 </div>
