--- a/public/templates/main.template.html
+++ b/public/templates/main.template.html
@@ -1,126 +1,109 @@
-<div id="page-wrapper">
-    <div id="header-wrapper">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-sm-12 text-center">
-                    <div class="col-md-2 col-sm-2" id="logo"></div>
-
-                    <header class="col-md-8 col-sm-8" id="header">
-                        <nav id="nav" ng-init="$ctrl.go($location.path())">
-                            <a ng-class="$ctrl.selectedTab == '/' ? 'col-md-2 col-sm-2 current-page-item' : 'col-md-2 col-sm-2'"
-                               ng-click="$ctrl.go('/')">Главная</a>
-                            <a ng-class="$ctrl.selectedTab == '/about' ? 'col-md-2 col-sm-2 current-page-item' : 'col-md-2 col-sm-2'"
-                               ng-click="$ctrl.go('about')">О нас</a>
-                            <a ng-class="$ctrl.selectedTab == '/products' ? 'col-md-2 col-sm-2 current-page-item' : 'col-md-2 col-sm-2'"
-                               ng-click="$ctrl.go('products')">Продукция</a>
-                            <a ng-class="$ctrl.selectedTab == '/share' ? 'col-md-2 col-sm-2 current-page-item' : 'col-md-2 col-sm-2'"
-                               ng-click="$ctrl.go('share')">Акции</a>
-                            <a ng-class="$ctrl.selectedTab == '/vip' ? 'col-md-2 col-sm-2 current-page-item' : 'col-md-2 col-sm-2'"
-                               id="vipNavButton" ng-click="$ctrl.go('vip')">Отзывы</a>
-                            <a ng-class="$ctrl.selectedTab == '/contacts' ? 'col-md-2 col-sm-2 current-page-item' : 'col-md-2 col-sm-2'"
-                               ng-click="$ctrl.go('contacts')">Контакты</a>
-                        </nav>
-                    </header>
-                    <span ng-hide="showBasket" class="col-md-2 col-sm-2 basketEmpty" ng-click="$ctrl.go('basket')">
-                                <svg version="1.1"  class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px" height="30px" xml:space="preserve">
-                                    <path d="M27.715,10.48l-2.938,6.312c-0.082,0.264-0.477,0.968-1.318,0.968H11.831
-                                        c-0.89,0-1.479-0.638-1.602-0.904l-2.048-6.524C7.629,8.514,8.715,7.933,9.462,7.933c0.748,0,14.915,0,16.805,0
-                                        C27.947,7.933,28.17,9.389,27.715,10.48L27.715,10.48z M9.736,9.619c0.01,0.061,0.026,0.137,0.056,0.226l1.742,6.208
-                                        c0.026,0.017,0.058,0.028,0.089,0.028h11.629l2.92-6.27c0.025-0.073,0.045-0.137,0.053-0.192H9.736L9.736,9.619z M13.544,25.534
-                                        c-0.819,0-1.482-0.662-1.482-1.482s0.663-1.484,1.482-1.484c0.824,0,1.486,0.664,1.486,1.484S14.369,25.534,13.544,25.534
-                                        L13.544,25.534z M23.375,25.534c-0.82,0-1.482-0.662-1.482-1.482s0.662-1.484,1.482-1.484c0.822,0,1.486,0.664,1.486,1.484
-                                        S24.197,25.534,23.375,25.534L23.375,25.534z M24.576,21.575H13.965c-2.274,0-3.179-2.151-3.219-2.244
-                                        c-0.012-0.024-0.021-0.053-0.028-0.076c0,0-3.56-12.118-3.834-13.05c-0.26-0.881-0.477-1.007-1.146-1.007H2.9
-                                        c-0.455,0-0.82-0.364-0.82-0.818s0.365-0.82,0.82-0.82h2.841c1.827,0,2.4,1.103,2.715,2.181
-                                        c0.264,0.898,3.569,12.146,3.821,12.999c0.087,0.188,0.611,1.197,1.688,1.197h10.611c0.451,0,0.818,0.368,0.818,0.818
-                                        C25.395,21.21,25.027,21.575,24.576,21.575L24.576,21.575z"/>
-                                    </svg>
-                            </span>
-                    <span id="basketNav" class="col-md-2 col-sm-2" ng-show="showBasket" ng-click="$ctrl.go('basket')"><ngcart-summary></ngcart-summary></span>
-
-                </div>
-            </div>
-        </div>
+<div class="container">
+    <div class="row" id="header">
+            <header class="col-md-12 col-sm-12 text-center">
+                <div class="col-md-2 col-sm-2" id="logo"></div>
+                <nav class="col-md-8 col-sm-8">
+                    <a ng-class="{'current-page-item': $ctrl.class('/')}"
+                        ng-link="['Home']" class="col-md-2 col-sm-2">Главная</a>
+                    <a ng-class="{'current-page-item': $ctrl.class('/about')}"
+                        ng-link="['About']" class="col-md-2 col-sm-2">О нас</a>
+                    <a ng-class="{'current-page-item': $ctrl.class('/products/wines')
+                                                    || $ctrl.class('/products/grocery')}"
+                        ng-link="['Products']" class="col-md-2 col-sm-2">Продукция</a>
+                    <a ng-class="{'current-page-item': $ctrl.class('/share')}"
+                       ng-link="['Share']" class="col-md-2 col-sm-2">Акции</a>
+                    <a ng-class="{'current-page-item': $ctrl.class('/vip')}"
+                       ng-link="['Vip']" class="col-md-2 col-sm-2">Отзывы</a>
+                    <a ng-class="{'current-page-item': $ctrl.class('/contacts')}"
+                       ng-link="['Contacts']" class="col-md-2 col-sm-2">Контакты</a>
+                </nav>
+                <a class="col-md-2 col-sm-2" id="basketFull" ng-hide="showBasket" ng-link="['Basket']">
+                        <svg version="1.1"  class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px" height="30px" xml:space="preserve">
+                            <path d="M27.715,10.48l-2.938,6.312c-0.082,0.264-0.477,0.968-1.318,0.968H11.831
+                                c-0.89,0-1.479-0.638-1.602-0.904l-2.048-6.524C7.629,8.514,8.715,7.933,9.462,7.933c0.748,0,14.915,0,16.805,0
+                                C27.947,7.933,28.17,9.389,27.715,10.48L27.715,10.48z M9.736,9.619c0.01,0.061,0.026,0.137,0.056,0.226l1.742,6.208
+                                c0.026,0.017,0.058,0.028,0.089,0.028h11.629l2.92-6.27c0.025-0.073,0.045-0.137,0.053-0.192H9.736L9.736,9.619z M13.544,25.534
+                                c-0.819,0-1.482-0.662-1.482-1.482s0.663-1.484,1.482-1.484c0.824,0,1.486,0.664,1.486,1.484S14.369,25.534,13.544,25.534
+                                L13.544,25.534z M23.375,25.534c-0.82,0-1.482-0.662-1.482-1.482s0.662-1.484,1.482-1.484c0.822,0,1.486,0.664,1.486,1.484
+                                S24.197,25.534,23.375,25.534L23.375,25.534z M24.576,21.575H13.965c-2.274,0-3.179-2.151-3.219-2.244
+                                c-0.012-0.024-0.021-0.053-0.028-0.076c0,0-3.56-12.118-3.834-13.05c-0.26-0.881-0.477-1.007-1.146-1.007H2.9
+                                c-0.455,0-0.82-0.364-0.82-0.818s0.365-0.82,0.82-0.82h2.841c1.827,0,2.4,1.103,2.715,2.181
+                                c0.264,0.898,3.569,12.146,3.821,12.999c0.087,0.188,0.611,1.197,1.688,1.197h10.611c0.451,0,0.818,0.368,0.818,0.818
+                                C25.395,21.21,25.027,21.575,24.576,21.575L24.576,21.575z"/>
+                        </svg>
+                    </a>
+                <a class="col-md-2 col-sm-2" id="basketEmpty" ng-show="showBasket" ng-link="['Basket']">
+                    <ngcart-summary></ngcart-summary>
+                </a>
+            </header>
     </div>
+</div>
 
+<div class="container" id="main">
     <ng-outlet></ng-outlet>
+</div>
 
-    <div id="footer-wrapper">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-sm-12">
-                    <section>
-                        <div>
-                            <div class="row">
-                                <div class="col-md-3 col-sm-6">
-                                    <h3>Режим роботи</h3>
-                                    <ul>
-                                        <li>Пн-Сб: 10<sup>00</sup>-18<sup>00</sup></li>
-                                        <li>Вихідний: Неділя</li>
-                                        <li>(093) 11-11-111</li>
-                                        <li>(098) 11-11-111</li>
-                                        <li>(099) 11-11-111</li>
-                                        <li>wines@my-site.com.ua</li>
-                                    </ul>
-                                </div>
-                                <div class="col-md-3 col-sm-6">
-                                    <h3>Інформація</h3>
-                                    <ul class="link-list">
-                                        <li><a href="#">Оформлення візи в Польщу та Шенген</a></li>
-                                        <li><a href="#">Контакти</a></li>
-                                        <li><a href="#">Оплата і доставка</a></li>
-                                        <li><a href="#">Умови використання</a></li>
-                                    </ul>
-                                </div>
-                                <div class="col-md-3 col-sm-6">
-                                    <h3>Додатково</h3>
-                                    <ul class="link-list">
-                                        <li><a href="#">Бренди</a></li>
-                                        <li><a href="#">Подарункові сертифікати</a></li>
-                                        <li><a href="#">Партнерська програма</a></li>
-                                        <li><a href="#">Спеціальні</a></li>
-                                        <li><a href="#"></a></li>
-                                    </ul>
-                                </div>
-                                <div class="col-md-3 col-sm-6">
-                                    <h3>Обліковий запис</h3>
-                                    <ul class="link-list">
-                                        <li><a href="#">Обліковий запис</a></li>
-                                        <li><a href="#">Історія замовлень</a></li>
-                                        <li><a href="#">Список бажаних товарів</a></li>
-                                        <li><a href="#">Розсилання новин</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
+<div class="container" id="footerContainer">
+        <footer class="col-md-8 col-sm-12">
+                <div class="col-md-3 col-sm-6">
+                    <h3>Режим роботи</h3>
+                    <ul>
+                        <li>Пн-Сб: 10<sup>00</sup>-18<sup>00</sup></li>
+                        <li>Вихідний: Неділя</li>
+                        <li>(093) 11-11-111</li>
+                        <li>(098) 11-11-111</li>
+                        <li>(099) 11-11-111</li>
+                        <li>wines@my-site.com.ua</li>
+                    </ul>
                 </div>
-
-                <div class="col-md-4 col-sm-12 socialSection">
-                    <section>
-                        <h3>Підписатись на розсилку новин:</h3>
-                        <input type="email" name="email" id="email"><br><br>
-                        <input type="submit" class="btn-success" value="Підписатись">
-                    </section>
-                    <div class="social">
-                        <a class="socialButtons" id="facebook"></a>
-                        <a class="socialButtons" id="vk"></a>
-                        <a class="socialButtons" id="youtube"></a>
-                        <a class="socialButtons" id="twitter"></a>
-                        <a class="socialButtons" id="picasso"></a>
-                        <a class="socialButtons" id="googlePlus"></a>
-                    </div>
+                <div class="col-md-3 col-sm-6">
+                    <h3>Інформація</h3>
+                    <ul>
+                        <li><a href="#">Оформлення візи в Польщу та Шенген</a></li>
+                        <li><a href="#">Контакти</a></li>
+                        <li><a href="#">Оплата і доставка</a></li>
+                        <li><a href="#">Умови використання</a></li>
+                    </ul>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-
-                    <div id="copyright">
-                        &copy; 2017 Компанія Wines. Усі права захищені.
-                    </div>
-
+                <div class="col-md-3 col-sm-6">
+                    <h3>Додатково</h3>
+                    <ul>
+                        <li><a href="#">Бренди</a></li>
+                        <li><a href="#">Подарункові сертифікати</a></li>
+                        <li><a href="#">Партнерська програма</a></li>
+                        <li><a href="#">Спеціальні</a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
                 </div>
+                <div class="col-md-3 col-sm-6">
+                    <h3>Обліковий запис</h3>
+                    <ul>
+                        <li><a href="#">Обліковий запис</a></li>
+                        <li><a href="#">Історія замовлень</a></li>
+                        <li><a href="#">Список бажаних товарів</a></li>
+                        <li><a href="#">Розсилання новин</a></li>
+                    </ul>
+                </div>
+        </footer>
+
+        <div class="col-md-4 col-sm-12 socialSection">
+                <h3>Підписатись на розсилку новин:</h3>
+                <input title="email" type="email" name="email" id="email">
+                <input type="submit" class="btn" value="Підписатись">
+            <div class="social">
+                <a class="socialButtons" id="facebook"></a>
+                <a class="socialButtons" id="vk"></a>
+                <a class="socialButtons" id="youtube"></a>
+                <a class="socialButtons" id="twitter"></a>
+                <a class="socialButtons" id="picasso"></a>
+                <a class="socialButtons" id="googlePlus"></a>
             </div>
         </div>
-    </div>
+        <div class="col-md-12">
+
+            <div id="copyright">
+                &copy; 2017 Компанія Wines. Усі права захищені.
+            </div>
+
+        </div>
 </div>
