--- a/resources/assets/sass/main.css
+++ b/resources/assets/sass/main.css
@@ -140,13 +140,13 @@ nav a {
 }
 
 nav a:hover, nav a:active, nav a:focus, nav a:visited {
-    background: linear-gradient(to right, black, rgba(230, 0, 0, 0.3), rgba(230, 0, 0, 0.3), black);
+    background: linear-gradient(to right, transparent, rgba(230, 0, 0, 0.3), rgba(230, 0, 0, 0.3), transparent);
     color: #fff;
     text-decoration: none;
 }
 
 .current-page-item {
-    background: linear-gradient(to right, black, rgba(230, 0, 0, 0.3), rgba(230, 0, 0, 0.3), black);
+    background: linear-gradient(to right, transparent, rgba(230, 0, 0, 0.3), rgba(230, 0, 0, 0.3), transparent);
     color: #fff;
 }
 
@@ -265,9 +265,10 @@ nav a:hover, nav a:active, nav a:focus, nav a:visited {
     color: #fff;
 }
 
-.navBlock a:hover, .navBlock a:focus {
+.navBlock a:hover, .navBlock a:focus, .navBlock a:active {
     background: linear-gradient(to right, transparent, rgba(230, 0, 0, 0.3), rgba(230, 0, 0, 0.3), transparent);
     color: #fff;
+    text-decoration: none;
 }
 
 .winesNavHeader {
@@ -412,7 +413,7 @@ sup {
 }
 
 #facebook {
-    background: transparent url('/images/facebook_icon_black.png') no-repeat;
+    background: transparent url('/images/facebook_icon_white.png') no-repeat;
     background-size: 100%;
 }
 #facebook:hover {
@@ -421,7 +422,7 @@ sup {
 }
 
 #vk {
-    background: transparent url('/images/vk_icon_black.png') no-repeat;
+    background: transparent url('/images/vk_icon_white.png') no-repeat;
     background-size: 100%;
 }
 #vk:hover {
@@ -430,7 +431,7 @@ sup {
 }
 
 #youtube {
-    background: transparent url('/images/youtube_icon_black.png') no-repeat;
+    background: transparent url('/images/youtube_icon_white.png') no-repeat;
     background-size: 100%;
 }
 #youtube:hover {
@@ -439,7 +440,7 @@ sup {
 }
 
 #twitter {
-    background: transparent url('/images/twitter_icon_black.png') no-repeat;
+    background: transparent url('/images/twitter_icon_white.png') no-repeat;
     background-size: 100%;
 }
 #twitter:hover {
@@ -448,7 +449,7 @@ sup {
 }
 
 #picasso {
-    background: transparent url('/images/picasso_icon_black.png') no-repeat;
+    background: transparent url('/images/picasso_icon_white.png') no-repeat;
     background-size: 100%;
 }
 #picasso:hover {
@@ -457,7 +458,7 @@ sup {
 }
 
 #googlePlus {
-    background: transparent url('/images/google_plus_icon_black.png') no-repeat;
+    background: transparent url('/images/google_plus_icon_white.png') no-repeat;
     background-size: 100%;
 }
 #googlePlus:hover {
